--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="w3-row-padding">
 
       <!-- Left Column -->
-      <div class="w3-third" style='min-width:350px'>
+      <div class="w3-third" style='width:350px !important'>
 
         <div class="w3-white w3-text-grey w3-card-4">
           <div class="w3-display-container">
