--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </div>
           <div class="w3-container">
             <h2 style = "margin-bottom:-5px;">Ana Levordashka</h2>
-            <a href='https://en.wikipedia.org/wiki/Dr._rer._nat' target='_blank' style = " font-family:Kalam; text-decoration:none">"Literally: Doctor of the things of nature" <i class="fa fa-external-link-alt fa-fw w3w3-medium w3-text-grey" style="color:#ccc !important"></i></a>
+            <a href='https://en.wikipedia.org/wiki/Dr._rer._nat.' target='_blank' style = " font-family:Kalam; text-decoration:none">"Literally: Doctor of the things of nature" <i class="fa fa-external-link-alt fa-fw w3w3-medium w3-text-grey" style="color:#ccc !important"></i></a>
             <p>Psychology Researcher @ Uni of Bath <br>Currently teaching computers to understand how we talk about Cybersecurity. Mainly drinking coffee & googling how to do stuff.</p>
             <i class="fa fa-map-marker fa-fw w3-medium w3-text-gray"></i> Bristol, UK
             <hr>
