--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             <p>Psychology Researcher @ Uni of Bath <br>Currently teaching computers to understand how we talk about Cybersecurity. Mainly drinking coffee & googling how to do stuff.</p>
             <i class="fa fa-map-marker fa-fw w3-medium w3-text-gray"></i> Bristol, UK
             <hr>
-            <a href='https://researchportal.bath.ac.uk/en/persons/ana-levordashka' target='_blank' ><i class="far fa-id-card fa-fw  w3-small w3-text-gray"></i> work.</a>
-            <a href='mailto:alevordashka@gmail.com' target='_blank'><i class="far fa-envelope fa-fw  w3-small w3-text-gray"></i> email.</a>
-            <a href='http://twitter.com/anidr0id' target='_blank'><i class="fab fa-twitter fa-fw  w3-small w3-text-gray"></i> tw.</a>
-            <a href='https://www.dropbox.com/s/7aay955rfui4kt0/ALevordashka-CV.pdf?dl=0' target='_blank' ><i class="fas fa-align-justify fa-fw  w3-small w3-text-gray"></i> cv.</a>
-            <a href='https://scholar.google.com/citations?hl=en&user=ZcY8pysAAAAJ&view_op=list_works&sortby=pubdate' target='_blank'><i class="fas fa-align-justify fa-fw  w3-small w3-text-gray"><i class="fa fa-book fa-fw  w3-small w3-text-gray"></i> pub.</a>
+            <a href='https://researchportal.bath.ac.uk/en/persons/ana-levordashka' target='_blank' style="text-decoration:none"><i class="far fa-id-card fa-fw  w3-small w3-text-gray"></i> work.</a>
+            <a href='mailto:alevordashka@gmail.com' target='_blank' style="text-decoration:none"><i class="far fa-envelope fa-fw  w3-small w3-text-gray"></i> email.</a>
+            <a href='http://twitter.com/anidr0id' target='_blank' style="text-decoration:none"><i class="fab fa-twitter fa-fw  w3-small w3-text-gray"></i> tw.</a>
+            <a href='https://www.dropbox.com/s/7aay955rfui4kt0/ALevordashka-CV.pdf?dl=0' target='_blank' style="text-decoration:none" ><i class="fas fa-align-justify fa-fw  w3-small w3-text-gray"></i> cv.</a>
+            <a href='https://scholar.google.com/citations?hl=en&user=ZcY8pysAAAAJ&view_op=list_works&sortby=pubdate' target='_blank' style="text-decoration:none"><i class="fa fa-book fa-fw  w3-small w3-text-gray"></i> pub.</a>
             <p></p>
           </div>
         </div><br>
