--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="w3-container">
             <h2 style = "margin-bottom:-5px;">Ana Levordashka</h2>
             <a href='https://en.wikipedia.org/wiki/Dr._rer._nat.' target='_blank' style = " font-family:Kalam; text-decoration:none">"Literally: Doctor of the things of nature" <i class="fa fa-external-link-alt fa-fw w3w3-medium w3-text-grey" style="color:#ccc !important"></i></a>
-            <p>Research Associate @ <a href='https://en.wikipedia.org/wiki/Dr._rer._nat.' target='_blank'>CREATE Lab</a> <a href='https://bristolbathcreative.org' target='_blank'>Bristol+Bath Creative R+D</a> University of Bath<br>Audience experiences of immersive technology. Mainly drinking coffee & googling how to do stuff.</p>
+            <p>Research Associate @ <a href='https://en.wikipedia.org/wiki/Dr._rer._nat.' target='_blank'>CREATE Lab</a> <a href='https://bristolbathcreative.org' target='_blank'>Bristol+Bath Creative R+D</a><br>Audience experiences of immersive technology. Mainly drinking coffee & googling how to do stuff.</p>
             <i class="fa fa-map-marker fa-fw w3-medium w3-text-gray"></i> Bristol, UK
             <hr>
             <a href='https://researchportal.bath.ac.uk/en/persons/ana-levordashka' target='_blank' style="text-decoration:none"><i class="far fa-id-card fa-fw  w3-small w3-text-gray"></i> work. </a>
